@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020201129"
-#define public MagickPackageReleaseDate "snapshot-20201129"
+#define public MagickPackageVersionAddendum ".020201203"
+#define public MagickPackageReleaseDate "snapshot-20201203"
